Basic HTML skeleton with field inputs and library add js functions

--- a/index.html
+++ b/index.html
@@ -10,5 +10,17 @@
 </head>
 <body>
     
+
+<div>Library App</div>
+<div>Title  <input class='title entry-form'></div>
+<div>Author <input class='entry-form author'></div>
+<div># Pages <input class='entry-form pages'></div>
+<div>Have you read? <input class='entry-form read-status' type="checkbox"></div>
+<button class='add-book'>Add Book</button>
+
+<div class='library-display'></div>
+
+
+<button class='library-check'>console.log(myLibrary)</button>
 </body>
 </html>
