--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
     
 
 <div>Library App</div>
-<div>Title  <input class='title entry-form'></div>
-<div>Author <input class='entry-form author'></div>
-<div># Pages <input class='entry-form pages'></div>
-<div>Have you read? <input class='entry-form read-status' type="checkbox"></div>
-<button class='add-book'>Add Book</button>
+<div class='entry-form'>
+<div>Title  <input class='title'></div>
+<div>Author <input class='author'></div>
+<div># Pages <input class='pages'></div>
+<div>Have you read? <input class='read-status' type="checkbox"></div>
+<button class='add-book'>Add Book</button></div>
 
-<div class='library-display'></div>
+<div class='library-display' id='library-wipe'></div>
 
 
 <button class='library-check'>console.log(myLibrary)</button>
+<button class='remove-button'>test delete</button>
 </body>
 </html>
