update css styling

--- a/index.html
+++ b/index.html
@@ -11,18 +11,15 @@
 <body>
     
 
-<div>Library App</div>
+<div class='header'>Library App</div>
 <div class='entry-form'>
-<div>Title  <input class='title'></div>
-<div>Author <input class='author'></div>
-<div># Pages <input class='pages'></div>
-<div>Have you read? <input class='read-status' type="checkbox"></div>
+<div>Title  <input class='title input'></div>
+<div>Author <input class='author input'></div>
+<div># Pages <input class='pages input' type='number'></div>
+<div>Have you read? <input class='read-status input' type="checkbox"></div>
 <button class='add-book'>Add Book</button></div>
 
 <div class='library-display' id='library-wipe'></div>
 
-
-<button class='library-check'>console.log(myLibrary)</button>
-<button class='remove-button'>test delete</button>
 </body>
 </html>
