Read/Not Read toggle button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <div>Author <input class='author input'></div>
 <div># Pages <input class='pages input' type='number'></div>
 <div>Have you read? <input class='read-status input' type="checkbox"></div>
-<button class='add-book'>Add Book</button></div>
+</div>
+<button class='add-book'>Add Book</button>
 
 <div class='library-display' id='library-wipe'></div>
 
