--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <div>Title <input class='title input'></div>
 <div>Author <input class='author input'></div>
 <div># Pages <input class='pages input' type='number'></div>
-<div>Have you read? <input class='read-status input' type="checkbox"></div>
-</div>
+<div>Have you read it? <input class='read-status input' type="checkbox"></div>
 <button class='add-book'>Add Book</button>
+</div>
 
 <div class='library-display' id='library-wipe'></div>
 
