Add new book button, entry form is initial hidden

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     
 
 <div class='header'>Library App</div>
+<div class='banner'><button class='add-form'>New Book</button></div>
 <div class='entry-form'>
-<div>Title <input class='title input'></div>
-<div>Author <input class='author input'></div>
-<div># Pages <input class='pages input' type='number'></div>
-<div>Have you read it? <input class='read-status input' type="checkbox"></div>
+<div>Title</div><input class='title input'>
+<div>Author</div><input class='author input'>
+<div># Pages </div><input class='pages input' type='number'>
+<div>Have you read it?<input class='read-status input' type="checkbox"></div>
 <button class='add-book'>Add Book</button>
 </div>
 
