--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div>Title</div><input class='title input'>
 <div>Author</div><input class='author input'>
 <div># Pages </div><input class='pages input' type='number'>
-<div>Have you read it?<input class='read-status input' type="checkbox"></div>
+<div>Have you read it?<input class='read-status' type="checkbox"></div>
 <button class='add-book'>Add Book</button>
 </div>
 
